backend/tests/snapshots/health_probes_bdd__health_probe_health_ready_200.snap
---
source: backend/tests/health_probes_bdd.rs
expression: response.snapshot_payload()
---
{
  "body": {
    "checks": {
      "readiness": {
        "status": "pass"
      }
    },
    "status": "pass"
  },
  "headers": {
    "cache-control": "no-store",
    "content-type": "application/json"
  },
  "status": 200,
  "uri": "/health/ready"
}
