backend/tests/snapshots/health_probes_bdd__health_probe_health_ready_503.snap
---
source: backend/tests/health_probes_bdd.rs
expression: response.snapshot_payload()
---
{
  "body": {
    "checks": {
      "readiness": {
        "status": "fail"
      }
    },
    "status": "fail"
  },
  "headers": {
    "cache-control": "no-store",
    "content-type": "application/json"
  },
  "status": 503,
  "uri": "/health/ready"
}
